Analizador lexico y sintactico/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CADENA
    NUMERO
    OUT
    PRINTLN
    SYSTEM

Grammar

Rule 0     S' -> program
Rule 1     program -> PUBLIC STATIC VOID ID PABIERTO PCERRADO LLAVE_ABIERTA statements LLAVE_CERRADA
Rule 2     statements -> statement statements
Rule 3     statements -> statement
Rule 4     statements -> empty
Rule 5     statement -> N OPERADOR SIMBOLO
Rule 6     statement -> FOR PABIERTO statement PCERRADO LLAVE_ABIERTA statements LLAVE_CERRADA
Rule 7     statement -> LLAVE_ABIERTA statements LLAVE_CERRADA
Rule 8     empty -> <empty>

Terminals, with rules where they appear

CADENA               : 
FOR                  : 6
ID                   : 1
LLAVE_ABIERTA        : 1 6 7
LLAVE_CERRADA        : 1 6 7
N                    : 5
NUMERO               : 
OPERADOR             : 5
OUT                  : 
PABIERTO             : 1 6
PCERRADO             : 1 6
PRINTLN              : 
PUBLIC               : 1
SIMBOLO              : 5
STATIC               : 1
SYSTEM               : 
VOID                 : 1
error                : 

Nonterminals, with rules where they appear

empty                : 4
program              : 0
statement            : 2 3 6
statements           : 1 2 6 7

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PUBLIC STATIC VOID ID PABIERTO PCERRADO LLAVE_ABIERTA statements LLAVE_CERRADA

    PUBLIC          shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PUBLIC . STATIC VOID ID PABIERTO PCERRADO LLAVE_ABIERTA statements LLAVE_CERRADA

    STATIC          shift and go to state 3


state 3

    (1) program -> PUBLIC STATIC . VOID ID PABIERTO PCERRADO LLAVE_ABIERTA statements LLAVE_CERRADA

    VOID            shift and go to state 4


state 4

    (1) program -> PUBLIC STATIC VOID . ID PABIERTO PCERRADO LLAVE_ABIERTA statements LLAVE_CERRADA

    ID              shift and go to state 5


state 5

    (1) program -> PUBLIC STATIC VOID ID . PABIERTO PCERRADO LLAVE_ABIERTA statements LLAVE_CERRADA

    PABIERTO        shift and go to state 6


state 6

    (1) program -> PUBLIC STATIC VOID ID PABIERTO . PCERRADO LLAVE_ABIERTA statements LLAVE_CERRADA

    PCERRADO        shift and go to state 7


state 7

    (1) program -> PUBLIC STATIC VOID ID PABIERTO PCERRADO . LLAVE_ABIERTA statements LLAVE_CERRADA

    LLAVE_ABIERTA   shift and go to state 8


state 8

    (1) program -> PUBLIC STATIC VOID ID PABIERTO PCERRADO LLAVE_ABIERTA . statements LLAVE_CERRADA
    (2) statements -> . statement statements
    (3) statements -> . statement
    (4) statements -> . empty
    (5) statement -> . N OPERADOR SIMBOLO
    (6) statement -> . FOR PABIERTO statement PCERRADO LLAVE_ABIERTA statements LLAVE_CERRADA
    (7) statement -> . LLAVE_ABIERTA statements LLAVE_CERRADA
    (8) empty -> .

    N               shift and go to state 13
    FOR             shift and go to state 14
    LLAVE_ABIERTA   shift and go to state 9
    LLAVE_CERRADA   reduce using rule 8 (empty -> .)

    statements                     shift and go to state 10
    statement                      shift and go to state 11
    empty                          shift and go to state 12

state 9

    (7) statement -> LLAVE_ABIERTA . statements LLAVE_CERRADA
    (2) statements -> . statement statements
    (3) statements -> . statement
    (4) statements -> . empty
    (5) statement -> . N OPERADOR SIMBOLO
    (6) statement -> . FOR PABIERTO statement PCERRADO LLAVE_ABIERTA statements LLAVE_CERRADA
    (7) statement -> . LLAVE_ABIERTA statements LLAVE_CERRADA
    (8) empty -> .

    N               shift and go to state 13
    FOR             shift and go to state 14
    LLAVE_ABIERTA   shift and go to state 9
    LLAVE_CERRADA   reduce using rule 8 (empty -> .)

    statements                     shift and go to state 15
    statement                      shift and go to state 11
    empty                          shift and go to state 12

state 10

    (1) program -> PUBLIC STATIC VOID ID PABIERTO PCERRADO LLAVE_ABIERTA statements . LLAVE_CERRADA

    LLAVE_CERRADA   shift and go to state 16


state 11

    (2) statements -> statement . statements
    (3) statements -> statement .
    (2) statements -> . statement statements
    (3) statements -> . statement
    (4) statements -> . empty
    (5) statement -> . N OPERADOR SIMBOLO
    (6) statement -> . FOR PABIERTO statement PCERRADO LLAVE_ABIERTA statements LLAVE_CERRADA
    (7) statement -> . LLAVE_ABIERTA statements LLAVE_CERRADA
    (8) empty -> .

  ! reduce/reduce conflict for LLAVE_CERRADA resolved using rule 3 (statements -> statement .)
    LLAVE_CERRADA   reduce using rule 3 (statements -> statement .)
    N               shift and go to state 13
    FOR             shift and go to state 14
    LLAVE_ABIERTA   shift and go to state 9

  ! LLAVE_CERRADA   [ reduce using rule 8 (empty -> .) ]

    statement                      shift and go to state 11
    statements                     shift and go to state 17
    empty                          shift and go to state 12

state 12

    (4) statements -> empty .

    LLAVE_CERRADA   reduce using rule 4 (statements -> empty .)


state 13

    (5) statement -> N . OPERADOR SIMBOLO

    OPERADOR        shift and go to state 18


state 14

    (6) statement -> FOR . PABIERTO statement PCERRADO LLAVE_ABIERTA statements LLAVE_CERRADA

    PABIERTO        shift and go to state 19


state 15

    (7) statement -> LLAVE_ABIERTA statements . LLAVE_CERRADA

    LLAVE_CERRADA   shift and go to state 20


state 16

    (1) program -> PUBLIC STATIC VOID ID PABIERTO PCERRADO LLAVE_ABIERTA statements LLAVE_CERRADA .

    $end            reduce using rule 1 (program -> PUBLIC STATIC VOID ID PABIERTO PCERRADO LLAVE_ABIERTA statements LLAVE_CERRADA .)


state 17

    (2) statements -> statement statements .

    LLAVE_CERRADA   reduce using rule 2 (statements -> statement statements .)


state 18

    (5) statement -> N OPERADOR . SIMBOLO

    SIMBOLO         shift and go to state 21


state 19

    (6) statement -> FOR PABIERTO . statement PCERRADO LLAVE_ABIERTA statements LLAVE_CERRADA
    (5) statement -> . N OPERADOR SIMBOLO
    (6) statement -> . FOR PABIERTO statement PCERRADO LLAVE_ABIERTA statements LLAVE_CERRADA
    (7) statement -> . LLAVE_ABIERTA statements LLAVE_CERRADA

    N               shift and go to state 13
    FOR             shift and go to state 14
    LLAVE_ABIERTA   shift and go to state 9

    statement                      shift and go to state 22

state 20

    (7) statement -> LLAVE_ABIERTA statements LLAVE_CERRADA .

    N               reduce using rule 7 (statement -> LLAVE_ABIERTA statements LLAVE_CERRADA .)
    FOR             reduce using rule 7 (statement -> LLAVE_ABIERTA statements LLAVE_CERRADA .)
    LLAVE_ABIERTA   reduce using rule 7 (statement -> LLAVE_ABIERTA statements LLAVE_CERRADA .)
    LLAVE_CERRADA   reduce using rule 7 (statement -> LLAVE_ABIERTA statements LLAVE_CERRADA .)
    PCERRADO        reduce using rule 7 (statement -> LLAVE_ABIERTA statements LLAVE_CERRADA .)


state 21

    (5) statement -> N OPERADOR SIMBOLO .

    N               reduce using rule 5 (statement -> N OPERADOR SIMBOLO .)
    FOR             reduce using rule 5 (statement -> N OPERADOR SIMBOLO .)
    LLAVE_ABIERTA   reduce using rule 5 (statement -> N OPERADOR SIMBOLO .)
    LLAVE_CERRADA   reduce using rule 5 (statement -> N OPERADOR SIMBOLO .)
    PCERRADO        reduce using rule 5 (statement -> N OPERADOR SIMBOLO .)


state 22

    (6) statement -> FOR PABIERTO statement . PCERRADO LLAVE_ABIERTA statements LLAVE_CERRADA

    PCERRADO        shift and go to state 23


state 23

    (6) statement -> FOR PABIERTO statement PCERRADO . LLAVE_ABIERTA statements LLAVE_CERRADA

    LLAVE_ABIERTA   shift and go to state 24


state 24

    (6) statement -> FOR PABIERTO statement PCERRADO LLAVE_ABIERTA . statements LLAVE_CERRADA
    (2) statements -> . statement statements
    (3) statements -> . statement
    (4) statements -> . empty
    (5) statement -> . N OPERADOR SIMBOLO
    (6) statement -> . FOR PABIERTO statement PCERRADO LLAVE_ABIERTA statements LLAVE_CERRADA
    (7) statement -> . LLAVE_ABIERTA statements LLAVE_CERRADA
    (8) empty -> .

    N               shift and go to state 13
    FOR             shift and go to state 14
    LLAVE_ABIERTA   shift and go to state 9
    LLAVE_CERRADA   reduce using rule 8 (empty -> .)

    statement                      shift and go to state 11
    statements                     shift and go to state 25
    empty                          shift and go to state 12

state 25

    (6) statement -> FOR PABIERTO statement PCERRADO LLAVE_ABIERTA statements . LLAVE_CERRADA

    LLAVE_CERRADA   shift and go to state 26


state 26

    (6) statement -> FOR PABIERTO statement PCERRADO LLAVE_ABIERTA statements LLAVE_CERRADA .

    N               reduce using rule 6 (statement -> FOR PABIERTO statement PCERRADO LLAVE_ABIERTA statements LLAVE_CERRADA .)
    FOR             reduce using rule 6 (statement -> FOR PABIERTO statement PCERRADO LLAVE_ABIERTA statements LLAVE_CERRADA .)
    LLAVE_ABIERTA   reduce using rule 6 (statement -> FOR PABIERTO statement PCERRADO LLAVE_ABIERTA statements LLAVE_CERRADA .)
    LLAVE_CERRADA   reduce using rule 6 (statement -> FOR PABIERTO statement PCERRADO LLAVE_ABIERTA statements LLAVE_CERRADA .)
    PCERRADO        reduce using rule 6 (statement -> FOR PABIERTO statement PCERRADO LLAVE_ABIERTA statements LLAVE_CERRADA .)

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: reduce/reduce conflict in state 11 resolved using rule (statements -> statement)
WARNING: rejected rule (empty -> <empty>) in state 11
